--- a/src/components/work/ProjectContainer.css
+++ b/src/components/work/ProjectContainer.css
@@ -11,7 +11,7 @@
 .secondary-projects-container {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   width: 80%;
 }
 
